--- a/messages/advisory-board.html
+++ b/messages/advisory-board.html
@@ -110,7 +110,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html">Committees</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
