--- a/messages/advisory-board.html
+++ b/messages/advisory-board.html
@@ -147,8 +147,9 @@
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4">
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <h3>Announcing Soon..</h3>
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
@@ -182,12 +183,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
@@ -221,12 +222,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
@@ -260,12 +261,12 @@
                   </ul>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
             <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
+            <!-- <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
                 <img
                   src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
@@ -300,12 +301,12 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
 
       <!-- FOOTER -->
-     <footer class="container mt-5">
+      <footer class="container mt-5">
         <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
@@ -319,12 +320,16 @@
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
                   ><i class="fa fa-instagram"></i
                 ></a>
               </li>
               <li class="list-inline-item m-0">
-                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
                   ><i class="fa fa-linkedin"></i
                 ></a>
               </li></ul
