--- a/messages/advisory-board.html
+++ b/messages/advisory-board.html
@@ -64,12 +64,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="#"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a class="dropdown-item" href="#"
                     >International Press Application</a
                   >
                 </li>
