--- a/messages/advisory-board.html
+++ b/messages/advisory-board.html
@@ -94,7 +94,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
+                Apply
               </a>
               <ul
                 class="dropdown-menu"
@@ -103,12 +103,12 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="#"
+                    href="../register/delegate_register.html"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <a class="dropdown-item" href="../register/ip_register.html"
                     >International Press Application</a
                   >
                 </li>
