--- a/messages/advisory-board.html
+++ b/messages/advisory-board.html
@@ -61,6 +61,11 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
+               <li>
+                  <a class="dropdown-item" href="../messages/ogl.html"
+                    >Our Guiding Light</a
+                  >
+                </li>
                 <li>
                   <a
                     class="dropdown-item"
@@ -103,15 +108,17 @@
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
               >
-                <li>
+               <li>
                   <a
                     class="dropdown-item"
-                    href="../register/delegate_register.html"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/delegateform.aspx"
                     >Delegate Application</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../register/ip_register.html"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -201,7 +208,7 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
-              Aakarsh
+              Mr.Aakarsh
               <span class="text-muted">Shrivastava</span>
             </h2>
             <h5>Dept. Secretary General, AMIMUN '20</h5>
@@ -282,7 +289,7 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
-              Deviena <span class="text-muted">Srivastava</span>
+              Ms.Deviena <span class="text-muted">Srivastava</span>
             </h2>
             <h5>Secretary General, AMIMUN '19</h5>
             <p class="lead">
@@ -319,7 +326,7 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">
-              Yash <span class="text-muted">Bhati</span>
+              Mr.Yash <span class="text-muted">Bhati</span>
             </h2>
             <h5>Director General, AMIMUN '19</h5>
             <p class="lead">
