--- a/our-team/guiding-light.html
+++ b/our-team/guiding-light.html
@@ -28,9 +28,7 @@
               <div class="sub-menu-1">
                 <ul>
                   <li>
-                    <a href="./guiding-light.html"
-                      >Our Guiding Light</a
-                    >
+                    <a href="./guiding-light.html">Our Guiding Light</a>
                   </li>
                   <li>
                     <a href="./advisory-board.html">Advisory Board</a>
@@ -39,9 +37,7 @@
                     <a href="./secretariate.html">Secretariat</a>
                   </li>
                   <li>
-                    <a href="./org-committee.html"
-                      >Organising Committee</a
-                    >
+                    <a href="./org-committee.html">Organising Committee</a>
                   </li>
                 </ul>
               </div>
@@ -52,7 +48,7 @@
         </div>
         <div id="logo">
           <a href="../index.html"
-            ><img src="../assets/logo.png" alt="AMIMUN logo" srcset=""
+            ><img src="../assets/logo.svg" alt="AMIMUN logo" srcset=""
           /></a>
         </div>
         <div class="menu-bar">
