--- a/our-team/secretariate.html
+++ b/our-team/secretariate.html
@@ -69,7 +69,7 @@
               </div>
             </li>
             <li>Gallery</li>
-            <li>AMIMUN Club</li>
+            <li><a href="../club.html">AMIMUN Club</a></li>
             <li>Resources</li>
           </ul>
         </div>
